Highlight quotes, avoid breaks in tables, style table & figure captions, add links to contents, fix table

--- a/epub/styles.epub.css
+++ b/epub/styles.epub.css
@@ -124,7 +124,9 @@ font-size: 0.5em;
 
 
 blockquote{
-    margin-left: 1.5em;
+    padding-left: 1.5em;
+    margin-left: 0px;
+    border-left: 5px grey dotted;
     margin-top: 1.5em;
     margin-bottom: 1.5em;
 }
@@ -229,6 +231,7 @@ table {
     border-collapse: collapse;
     vertical-align: top;
     font-size: 0.5em;
+    page-break-inside: avoid;
 }
 
 table th {
@@ -245,5 +248,11 @@ th, td {
 }
 table .header {
     color: #f23f4e;
+    font-family: VAGRoundedStd-Bold;
+}
+
+table+p, figure+p {
+    text-align: right;
+    font-size: 0.5em;
     font-family: VAGRoundedStd-Bold;
 }
